modify index and style.css

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <!-- By: mmervoye <marvin@42.fr>                    +#+  +:+       +#+       -->
 <!--                                              +#+#+#+#+#+   +#+          -->
 <!-- Created: 2018/05/25 16:17:03 by mmervoye          #+#    #+#            -->
-<!-- Updated: 2018/05/30 19:02:06 by mmervoye         ###   ########.fr      -->
+<!-- Updated: 2018/05/31 09:48:31 by matteo           ###   ########.fr      -->
 <!--                                                                         -->
 <!-- *********************************************************************** -->
 
@@ -24,7 +24,7 @@
 	</head>
 
 	<body>
-		<div class="container-fluid bg-secondary">
+		<div class="container-fluid bg-secondary bar">
 			<div class="row">
 				<div class="col-sm">
 					<h1 class="text-primary">Bienvenue sur mon chat !</h1>
